--- a/cndown.html
+++ b/cndown.html
@@ -103,8 +103,8 @@
         <a href="https://mtr-mirror.coding.net/api/share/download/38728c43-4e83-4add-be89-e1f4694b7d7f">分卷5</a></h3>
         <h2>0.10.7 超星云镜像（推荐）：</h2>
         <a href="http://d0.ananas.chaoxing.com/download/51a0489631c9adedb830fc165f7f3392?fn=MAS%E6%B1%89%E5%8C%960.10.7">下载</a>
-        <h2>0.10.7 OneDrive 365镜像（备选）：</h2>
-        <a href="https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly96c3oxNDQ3LW15LnNoYXJlcG9pbnQuY29tLzp1Oi9nL3BlcnNvbmFsL3poYW9tdHJfenN6MTQ0N190b3AvRWZpdHotZWxyR1JDdkdVaHNEVmo2YzBCczgzMl9BUHpfVm5CYnNhV1IxNXlnZz9lPUpPd0laRg==.zip">下载</a>
+        <h2>0.11.9 发布地址：</h2>
+        <a href="https://forum.monika.love/d/234-mas-monika-after-story-0119">查看</a>
      </div> 
   </div> 
  </div> 
