--- a/releases.html
+++ b/releases.html
@@ -32,42 +32,17 @@
    <div class="dyna-sitebuild-block-content" id="yui_3_14_1_1_1517231117948_2735"> 
        <h1 id="releasetop">Releases</h1>
        <h2>Latest Version:</h2>
-       <h3><a href="https://github.com/Monika-After-Story/MonikaModDev/releases/download/v0.11.3/Monika_After_Story-0.11.3-Mod.zip">0.11.3 - 日落更新</a>
+       <h3><a href="https://github.com/Monika-After-Story/MonikaModDev/releases/download/v0.11.3/Monika_After_Story-0.11.3-Mod.zip">0.11.9</a>
            -- (<a href="https://github.com/Monika-After-Story/MonikaModDev/releases/tag/v0.11.3">补丁说明</a>)</h3>
        <h3>翻译：</h3>
        <p>所有翻译均为非官方翻译。更多关于非官方翻译的信息 <a href="https://github.com/Monika-After-Story/MonikaModDev/issues/3765">这里</a>.</p>
        <br>
        
-       <h2>精灵包(Spritepacks):</h2>
-       <h3><a href="https://github.com/Monika-After-Story/MonikaModDev/releases/download/v0.11.3/spritepacks.zip">最新的Spritepack</a></h3>
-       <h3>Contents:</h3>
-       <ul class="_versionlist">
-           <li>Ribbons by Anonymioo</li>
-           <li>Spooky Hairclips by Bellmandi86</li>
-           <li>Short Hairs by Echo</li>
-           <li>Blue Shirt by Finale</li>
-           <li>Winter Jacket by Finale</li>
-           <li>Hairclips by JMO</li>
-           <li>More Ribbon Colors by Lanvallime</li>
-           <li>Bun Hairstyle by MAS Team</li>
-           <li>Black Bow by Multimokia</li>
-           <li>Hatsune Miku by Orcaramelo</li>
-           <li>More Hairstyles by Orcaramelo</li>
-           <li>Sakuya Izayoi Cosplay by Orcaramelo</li>
-           <li>Shell Bikini by Orcaramelo</li>
-           <li>Sweater by Orcaramelo and Moniking</li>
-           <li>Twin Ribbons by Orcaramelo</li>
-           <li>Chokers by Trilasent</li>
-           <li>Pink Shirt by Velius94</li>
-           <li>S-Type Ribbons by Velius94</li>
-           <li>White and Navy Blue Dress by Velius94</li>
-       </ul>
        <br>
 
        <h2>中文版本：</h2>
        <ul class="_versionlist">
-           <li><a href="cndown.html">0.10.7 - 2020年 "V日 "最新进展</a>
-               -- (<a href="https://github.com/Monika-After-Story/MonikaModDev/releases/tag/v0.10.7">补丁说明</a>)</li>
+           <li><a href="cndown.html">0.11.9</a></li>
    </div> 
   </div> 
  </div> 
